--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,8 +16,12 @@ mybatis-plus:
   type-aliases-package: com.itheima.mp.domain.po
   global-config:
     db-config:
+      logic-delete-field: deleted # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
       id-type: auto # 全局id类型为自增长
   mapper-locations: "classpath*:/mapper/**/*.xml" # Mapper.xml文件地址，当前这个是默认值。可以不用配置
+
 
 knife4j:
   enable: true
